[metadata]
description-file = README.md

[tool:pytest]
addopts =
  --cov=node2vec
  --cov-report=term-missing:skip-covered
  -vvv

[coverage:run]
omit =
  node2vec/spark.py
  examples/

[flake8]
ignore = E24,E203,W503
max-line-length = 88
format = pylint
exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv,tests/*,docs/*
max-complexity = 10
